--- a/Progress Steps/index.html
+++ b/Progress Steps/index.html
@@ -5,16 +5,30 @@
   <meta charset="utf-8">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
-  <title>My Project</title>
+  <title>Progress Steps</title>
 </head>
 
 <body>
-  <h1>Project Starter</h1>
+<div class="container">
+  <div class="progress-container">
+    <div class="progress" id="progress"></div> <!-- NOTE: the blue line between circles (created by CSS) -->
+    <div class="circle active">1</div>
+    <div class="circle">2</div>
+    <div class="circle">3</div>
+    <div class="circle">4</div>
+    </div>
+     <!-- NOTE: out of the progress-countainer but inside container -->
+    <button  class="btn" id="prev" disabled>Prev</button>
+    <button  class="btn" id="next">Next</button>
+
+    </div>
+
+</div>
 
 
 
 
-    <script type="text/javascript"></script>
+  <script type="text/javascript"></script>
 </body>
 
 </html>
