--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -3,18 +3,49 @@
 
 <head>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
-  <title>My Project</title>
+  <title>Rotating Navigation</title>
 </head>
 
 <body>
-  <h1>Project Starter</h1>
+  <div class="container">
+    <div class="circle-container">
+      <div class="circle">
+
+
+        <button id="close">
+          <!-- NOTE: Using font awesome icons(close class) -->
+          <i class="fas fa-times"></i>
+        </button>
+        <button id="open">
+          <!-- NOTE: Using font awsome icons(hamburger class) -->
+          <i class="fas fa-bars"></i>
+        </button>
+      </div>
+    </div>
+    <div class="content">
+      <h1>Bro thats amazing </h1>
+      <small>Babak Abdolah Zadeh</small>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+      <h3>Myself</h3>
+      <img class="img-resizing" src="img/IMG_1511.jpg" alt="bobby">
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis
+        aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    </div>
+
+  </div>
+  <nav>
+    <li><i class="fas fa-home">home</i></li>
+    <li><i class="fas fa-user-alt">About</i></li>
+    <li><i class="fas fa-envelope">Contact</i></li>
+  </nav>
 
 
 
-
-    <script type="text/javascript"></script>
+  <script type="script.js"></script>
 </body>
 
 </html>
