--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<!-- NOTE: hidden class: 1-class="show-nav" (Documentation CSS -> brief usage: for rotating) -->
+
 <html lang="en" dir="ltr">
 
 <head>
@@ -9,11 +11,10 @@
 </head>
 
 <body>
-  <div class="container">
+  <div class="container show-nav">
+
     <div class="circle-container">
       <div class="circle">
-
-
         <button id="close">
           <!-- NOTE: Using font awesome icons(close class) -->
           <i class="fas fa-times"></i>
@@ -24,6 +25,7 @@
         </button>
       </div>
     </div>
+
     <div class="content">
       <h1>Bro thats amazing </h1>
       <small>Babak Abdolah Zadeh</small>
@@ -36,11 +38,16 @@
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     </div>
 
-  </div>
-  <nav>
-    <li><i class="fas fa-home">home</i></li>
-    <li><i class="fas fa-user-alt">About</i></li>
-    <li><i class="fas fa-envelope">Contact</i></li>
+  </div> <!-- NOTE: End of container -->
+
+
+  <nav> <!-- NOTE: The <nav> tag defines a set of navigation links. -->
+    <ul>
+      <li><i class="fas fa-home"><a href="#">home</a></i></li>
+      <li><i class="fas fa-user-alt"><a href="#">About</a></i></li>
+      <li><i class="fas fa-envelope"><a href="#">Contact</a></i></li>
+    </ul>
+
   </nav>
 
 
