--- a/Rotating Navigation/index.html
+++ b/Rotating Navigation/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class="container show-nav">
+  <div class="container">
 
     <div class="circle-container">
       <div class="circle">
@@ -52,7 +52,7 @@
 
 
 
-  <script type="script.js"></script>
+  <script src="script.js"></script>
 </body>
 
 </html>
