HTML/CSS/JS Thought Version0.0 (standard method)

--- a/Hidden Search Widget/index.html
+++ b/Hidden Search Widget/index.html
@@ -9,16 +9,11 @@
 </head>
 
 <body>
-  <div class="container">
-
-    <div class="widget-container">
-      <button  id="search-button"><i class="fa fa-search"></i></button>
+  <div class="container"> <!-- NOTE: not usabel here! but it can be for adding new elements -->
+    <div class="search">
+        <button   class="btn"><i class="fa fa-search"></i></button>
+        <input type="search" name="search"  class="input" placeholder="Search...">
     </div>
-
-    <div class="search-bar">
-      <input type="search" name="search" placeholder="Search...">
-    </div>
-
   </div>
 
 
